--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-map-gl": "^4.1.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.20",
+    "react-with-gesture": "^4.0.8",
     "react-yandex-maps": "^3.0.2"
   },
   "scripts": {
